Crash deleting a scene after moving object between collections (from a collection that is hidden in the Outliner, but visible in a viewport) #97069

Closed
opened 2022-04-05 12:34:46 +02:00 by Konstantin Kharkovschenko · 13 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 19:06, hash: fc259d4c30
Broken: version: 2.91.0
Worked: version: 2.90.1

Did not crash before 92736a7b75

Short description of error
Crash when try to delete non-empty scene in particular file. I can't reproduce it from default scene. But I delete all from this file except a cube in a new collection and Blender still crashes.

Exact steps for others to reproduce the error

    • make a new empty scene (just to have two scenes, so we can later delete the original one)
    • return to the original scene
    • in the Outliner: Hide In Viewport the Collection (eye icon)
    • in the 3D view sidebar, View tab, Collections panel: enable Local Collections
    • make Collection visible there (so it is disabled in the Outliner, but locally in the viewport enabled)
    • move the selected Cube to the Scene Collection (either by drag n drop in the Outliner or {key M} in the 3D view
    • try to delete the scene --> crash

scene saves after step [5]:
#97069.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 19:06, hash: `fc259d4c30` Broken: version: 2.91.0 Worked: version: 2.90.1 Did not crash before 92736a7b75 **Short description of error** Crash when try to delete non-empty scene in particular file. I can't reproduce it from default scene. But I delete all from this file except a cube in a new collection and Blender still crashes. **Exact steps for others to reproduce the error** - - [x] make a new empty scene (just to have two scenes, so we can later delete the original one) - - [x] return to the original scene - - [x] in the Outliner: `Hide In Viewport` the `Collection` (eye icon) - - [x] in the 3D view sidebar, `View` tab, `Collections` panel: enable `Local Collections` - - [x] make `Collection` visible there (so it is disabled in the Outliner, but locally in the viewport enabled) - - [x] move the selected `Cube` to the `Scene Collection` (either by drag n drop in the Outliner or {key M} in the 3D view - - [x] try to delete the scene --> crash scene saves after step [5]: [#97069.blend](https://archive.blender.org/developer/F12975689/T97069.blend)

Added subscriber: @Morphin

Added subscriber: @Morphin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

Same situation as in #94066 (Deleting this specific scene causes Blender 2.93.5 to instantly crash)

@Morphin : unfortunately we require some way to reproduce this (see also said other report), is there a way to reproduce this?

Same situation as in #94066 (Deleting this specific scene causes Blender 2.93.5 to instantly crash) @Morphin : unfortunately we require some way to reproduce this (see also said other report), is there a way to reproduce this?
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

OK, found a way to reproduce:

  • make a new empty scene (just to have two scenes, so we can later delete the original one)
  • return to the original scene
  • in the Outliner: Hide In Viewport the Collection (eye icon)
  • in the 3D view sidebar, View tab, Collections panel: enable Local Collections
  • make Collection visible there (so it is disabled in the Outliner, but locally in the viewport enabled)
  • move the selected Cube to the Scene Collection (either by drag n drop in the Outliner or {key M} in the 3D view
  • try to delete the scene --> crash
OK, found a way to reproduce: - make a new empty scene (just to have two scenes, so we can later delete the original one) - return to the original scene - in the Outliner: `Hide In Viewport` the Collection (eye icon) - in the 3D view sidebar, `View` tab, `Collections` panel: enable `Local Collections` - make `Collection` visible there (so it is disabled in the Outliner, but locally in the viewport enabled) - move the selected `Cube` to the `Scene Collection` (either by drag n drop in the Outliner or {key M} in the 3D view - try to delete the scene --> crash
Philipp Oeser changed title from Crash when delete non-empty scene to Crash deleting a scene after moving object between collections (from a collection that is hidden in the Outliner, but visible in a viewport) 2022-04-05 14:46:51 +02:00
Member

Added subscribers: @mont29, @dfelinto

Added subscribers: @mont29, @dfelinto
Member

@dfelinto: mind checking?

CC @mont29: since this came up before, but was not reproducable in #94066.

@dfelinto: mind checking? CC @mont29: since this came up before, but was not reproducable in #94066.
Member

And like I said in #94066: we have a CollectionObject without an object here

./bin/blender(BLI_system_backtrace+0x26) [0x10554894]
./bin/blender(_BLI_assert_print_backtrace+0x16) [0x10415d2d]
./bin/blender() [0x3ae5b60]
./bin/blender(BKE_layer_collection_local_sync+0x91) [0x3ae5cb1]
./bin/blender(BKE_layer_collection_local_sync_all+0xa3) [0x3ae5d6b]
./bin/blender(BKE_main_collection_sync+0x52) [0x3ae511f]
./bin/blender(BKE_main_collection_sync_remap+0x186) [0x3ae52aa]
./bin/blender() [0x3af8261]
./bin/blender(BKE_libblock_relink_ex+0x235) [0x3af8d1d]
./bin/blender(BKE_id_free_ex+0x212) [0x3aed2d7]
./bin/blender() [0x3aed8a4]
./bin/blender(BKE_id_delete+0x4a) [0x3aed92b]
./bin/blender(ED_scene_delete+0xe2) [0x51c81d5]
./bin/blender() [0x51c86ca]
./bin/blender() [0x41421d3]
./bin/blender() [0x414297b]
./bin/blender(WM_operator_name_call_ptr+0x8f) [0x4142a17]
./bin/blender(WM_operator_name_call_ptr_with_depends_on_cursor+0xc4) [0x4142f9b]
./bin/blender() [0x534e9a6]
./bin/blender() [0x536b345]
./bin/blender() [0x414075e]
./bin/blender() [0x414660a]
./bin/blender() [0x4146b1b]
./bin/blender(wm_event_do_handlers+0x7a9) [0x41480be]
./bin/blender(WM_main+0x30) [0x413a55e]
./bin/blender() [0x3a6d085]
/lib64/libc.so.6(+0x2d590) [0x7f39ad887590]
/lib64/libc.so.6(__libc_start_main+0x7c) [0x7f39ad88763c]
./bin/blender(_start+0x25) [0x3a6ca65]
BLI_assert failed: source/blender/blenkernel/intern/layer.c:1596, layer_collection_local_sync(), at 'cob->ob'
And like I said in #94066: we have a `CollectionObject` without an object here ``` ./bin/blender(BLI_system_backtrace+0x26) [0x10554894] ./bin/blender(_BLI_assert_print_backtrace+0x16) [0x10415d2d] ./bin/blender() [0x3ae5b60] ./bin/blender(BKE_layer_collection_local_sync+0x91) [0x3ae5cb1] ./bin/blender(BKE_layer_collection_local_sync_all+0xa3) [0x3ae5d6b] ./bin/blender(BKE_main_collection_sync+0x52) [0x3ae511f] ./bin/blender(BKE_main_collection_sync_remap+0x186) [0x3ae52aa] ./bin/blender() [0x3af8261] ./bin/blender(BKE_libblock_relink_ex+0x235) [0x3af8d1d] ./bin/blender(BKE_id_free_ex+0x212) [0x3aed2d7] ./bin/blender() [0x3aed8a4] ./bin/blender(BKE_id_delete+0x4a) [0x3aed92b] ./bin/blender(ED_scene_delete+0xe2) [0x51c81d5] ./bin/blender() [0x51c86ca] ./bin/blender() [0x41421d3] ./bin/blender() [0x414297b] ./bin/blender(WM_operator_name_call_ptr+0x8f) [0x4142a17] ./bin/blender(WM_operator_name_call_ptr_with_depends_on_cursor+0xc4) [0x4142f9b] ./bin/blender() [0x534e9a6] ./bin/blender() [0x536b345] ./bin/blender() [0x414075e] ./bin/blender() [0x414660a] ./bin/blender() [0x4146b1b] ./bin/blender(wm_event_do_handlers+0x7a9) [0x41480be] ./bin/blender(WM_main+0x30) [0x413a55e] ./bin/blender() [0x3a6d085] /lib64/libc.so.6(+0x2d590) [0x7f39ad887590] /lib64/libc.so.6(__libc_start_main+0x7c) [0x7f39ad88763c] ./bin/blender(_start+0x25) [0x3a6ca65] BLI_assert failed: source/blender/blenkernel/intern/layer.c:1596, layer_collection_local_sync(), at 'cob->ob' ```

This issue was referenced by a0957ceab2

This issue was referenced by a0957ceab2635676b057b69d0a241fe895005466

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-04-12 18:49:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97069
No description provided.